<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="waybill"
            type="com.anugrahdev.app.klikPaket.data.models.waybill.WaybillData" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_layout"
        tools:context=".ui.MainActivity">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/layout_nestedscroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingBottom="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_height"
                    android:background="@drawable/layout_roundcorner"
                    android:fitsSystemWindows="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/wave_height"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_wave_1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ic_back"
                        android:layout_width="@dimen/btn_back_width"
                        android:layout_height="@dimen/btn_back_height"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/margin_header_title"
                        android:src="@drawable/ic_arrow_back"
                        app:layout_constraintEnd_toStartOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_header_title"
                        android:fontFamily="@font/poppinsmed"
                        android:text="@string/setting"
                        android:textColor="#fefefe"
                        android:textSize="@dimen/header_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/content_margin_top"
                    android:background="@drawable/layout_edittext"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/layout_padding"
                        android:paddingHorizontal="@dimen/layout_padding"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsbold"
                            android:gravity="center_horizontal"
                            android:text="@string/setting"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_18ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/general"
                            android:textSize="16.4sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:fontFamily="@font/poppinsbold"/>

                        <LinearLayout
                            android:id="@+id/setting_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/language"
                                android:textColor="@color/black"/>

                            <TextView
                                android:id="@+id/tv_selectedLanguage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="Indonesia"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimaryDark"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lacak_kiriman"
                            android:layout_marginTop="8dp"
                            android:textSize="16.4sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:fontFamily="@font/poppinsbold"/>
                        <LinearLayout
                            android:id="@+id/setting_clearhistory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/clear_history"
                                android:textColor="@color/black"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/clear_history_text"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimaryDark"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/information"
                            android:layout_marginTop="8dp"
                            android:textSize="16.4sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:fontFamily="@font/poppinsbold"/>
                        <LinearLayout
                            android:id="@+id/setting_ekspedisi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/courier_info"
                                android:textColor="@color/black"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/courier_info_text"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimaryDark"/>

                        <LinearLayout
                            android:id="@+id/setting_about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/about"
                                android:textColor="@color/black"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/about_text"/>
                        </LinearLayout>


                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
